# nva

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.coolify.yml  docker-compose.yml  nva-pet-resorts-ai-context.md  package-lock.json  package.json
.github/workflows/: ci.yml
app/: Cargo.toml  README.md
app/examples/: data_quality_hygiene_local_smoke.rs
app/src/: agents.rs  booking_triage.rs  checkout_completion.rs  crm_retention.rs  daily_update.rs  data_quality_hygiene.rs  lib.rs  local_smoke.rs  manager_daily_brief.rs  tools.rs
app/src/tools/: README.md  error.rs
app/tests/: app_service_contracts.rs  application_quality_patterns.rs  booking_triage_mvp.rs  checkout_completion_workflow_contracts.rs  crm_retention_workflow_contracts.rs  daily_care_update_mvp.rs  data_quality_hygiene_workflow_contracts.rs  full_chain_local_smoke.rs  manager_daily_brief_workflow_contracts.rs  workflow_service_composition_contracts.rs
apps/api/: Cargo.toml  Dockerfile  README.md
apps/api/openapi/: owned-operations-v0.openapi.json
apps/api/src/: http.rs  lib.rs  main.rs  public_contract.rs
apps/api/tests/: api_dto_contracts.rs  data_quality_hygiene_agent_contract.rs  health_contract.rs  manager_daily_brief_agent_context_contract.rs  manager_daily_brief_agent_drafts_contract.rs  manager_daily_brief_outcome_capture_contract.rs  outcome_capture_contracts.rs  owned_api_openapi_contract.rs  read_model_endpoint_contract.rs  vaccine_document_workflow_contract.rs
apps/cli/: Cargo.toml  README.md
apps/migrate-seed/: Dockerfile
apps/spacetimedb/: Cargo.toml  README.md
apps/worker/: Cargo.toml  Dockerfile  README.md
apps/worker/src/: lib.rs  main.rs  runtime.rs
apps/worker/tests/: runtime_mode_contract.rs
docs/: glossary-architecture-terms.md  glossary-source-data-terms.md  glossary-translation-layer-inventory.md  glossary-workflow-state-terms.md  glossary.md  qa-contract-crosswalk-source-evidence-usability-2026-06-19.md  qa-gingr-source-authority-comprehension-2026-06-19.md  qa-jargon-glossary-audit-2026-06-19.md  qa-published-jargon-link-audit-2026-06-19.md  qa-runtime-storage-surface-evidence-2026-06-19.md  qa-rustdoc-freshness-evidence-links-2026-06-19.md  qa-service-line-entity-comprehension-2026-06-19.md  qa-workflow-contract-comprehension-2026-06-19.md  rust-modernity.md  rustdoc-operational-language-guide.md
domain/: Cargo.toml  README.md
domain/src/: agent.rs  agents.rs  analytics.rs  audit.rs  booking_triage.rs  care.rs  customer.rs  daily_brief.rs  daily_update.rs  data_quality.rs  document.rs  entities.rs  incident.rs  lead.rs  lib.rs  location.rs  message.rs  operations.rs  pet.rs  policy.rs  portal.rs  reputation.rs  source.rs  staff.rs  temperament.rs  tools.rs  vaccine.rs  workflow.rs
domain/src/boarding/: README.md  accommodation.rs  cancellation.rs  capacity.rs  care.rs  deposit.rs  handoff.rs  housekeeping.rs  minimum_stay.rs  mod.rs  upsell.rs
domain/src/daycare/: README.md  assignment.rs  attendance.rs  coverage.rs  eligibility.rs  front_desk.rs  incident.rs  mod.rs  package_opportunity.rs
domain/src/grooming/: README.md  mod.rs
domain/src/money/: README.md  error.rs  mod.rs
domain/src/payment/: README.md  error.rs  mod.rs
domain/src/reservation/: README.md  error.rs  mod.rs
domain/src/retail/: README.md  inventory.rs  mod.rs  pos.rs  product.rs  recommendation.rs  reorder.rs  vendor.rs
domain/src/service/: mod.rs
domain/src/service/boarding/: accommodation.rs  cancellation.rs  capacity.rs  deposit.rs  handoff.rs  housekeeping.rs  mod.rs
domain/src/service/daycare/: assignment.rs  eligibility.rs  front_desk.rs  incident.rs  mod.rs  package_opportunity.rs
domain/src/service/retail/: inventory.rs  mod.rs  product.rs  recommendation.rs  reorder.rs  vendor.rs
domain/src/service/training/: mod.rs
domain/src/tools/: error.rs
domain/src/training/: README.md  mod.rs
domain/tests/: booking_triage_mvp.rs  core_mvp_data_model.rs  daily_care_update_mvp.rs  domain_quality_patterns.rs  operations_compatibility.rs  operations_inter_type_contracts.rs  petsuites_core_service_contracts.rs  reservation_source_contracts.rs  revenue_service_line_opportunity_models.rs  safe_string_value_objects.rs  service_module_architecture.rs  source_code_contracts.rs
integrations/gingr/: Cargo.toml  README.md
integrations/gingr/src/: config.rs  lib.rs  response.rs  transport.rs  webhook.rs
integrations/gingr/src/dto/: README.md  grooming.rs  mod.rs  retail.rs  training.rs
integrations/gingr/src/endpoint/: README.md  catalog.rs  commerce_retail.rs  labor_ops.rs  mod.rs  owners_animals.rs  reference_data.rs  report_cards_files.rs  reservations.rs
integrations/gingr/src/mapping/: README.md  customer.rs  mod.rs  pet.rs  retail.rs
integrations/gingr/tests/: config_redaction.rs  endpoint_contracts.rs  expanded_endpoint_contracts.rs  webhook_code_contracts.rs  webhook_contracts.rs
migrations/: 0001_mvp_foundation.sql  0002_data_quality_read_models.sql
scripts/: build_public_docs.sh  check-rust-modernity.sh  check_docs.sh  check_markdown_links.py  check_public_docs_landing.py  check_rustdoc_completeness.py  check_workspace_quality.py  demo_owned_operations_api.sh  dev.sh  full-chain-local-smoke.sh  migrate-and-seed-local.sh  migrate-local.sh  preflight_openviking_agent_infra.sh  smoke-local.sh  smoke_data_quality_hygiene_disabled_worker_outbox.sh  smoke_data_quality_hygiene_local_loop.sh  smoke_local_demo.sh  smoke_manager_daily_brief_local_loop.sh  spacetimedb_realtime_queue_demo.sh  test.sh
storage/: Cargo.toml  README.md
storage/src/: lib.rs  operations.rs
storage/src/service/: boarding.rs  daycare.rs  grooming.rs  mod.rs  retail.rs  training.rs
storage/src/service_line/: README.md  boarding.rs  daycare.rs  grooming.rs  mod.rs  retail.rs  training.rs
storage/tests/: core_service_contract_storage.rs  data_quality_hygiene_outcome_storage.rs  data_quality_read_model_storage.rs  manager_daily_brief_outcome_storage.rs  mvp_migration_contract.rs  operations_code_contracts.rs  operations_storage_contracts.rs
(+374 files in other folders)
