[workspace]
members = [
    "apps/cli",
    "apps/api",
    "apps/worker",
    "domain",
    "storage",
    "integrations/gingr",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/pet-resort-agent-foundation"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
bon = "3.9"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
hmac = "0.12"
http-body-util = "0.1"
nutype = { version = "0.7", features = ["serde"] }
domain = { path = "domain" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
sha2 = "0.10"
statum = "*"
subtle = "2.6"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
uuid = { version = "1.10", features = ["serde", "v4"] }
