[workspace]
members = [
    "app",
    "apps/cli",
    "apps/api",
    "apps/spacetimedb",
    "apps/worker",
    "domain",
    "storage",
    "integrations/gingr",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eboody/nva"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
bon = "3.9"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "2.0", features = ["display", "from", "into"] }
hmac = "0.12"
http-body-util = "0.1"
nutype = { version = "0.7", features = ["serde"] }
nonempty = { version = "0.12", features = ["serialize"] }
domain = { path = "domain" }
app = { path = "app" }
storage = { path = "storage" }
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
statum = "*"
strum = { version = "0.27", features = ["derive"] }
subtle = "2.6"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
uuid = { version = "1.10", features = ["serde"] }
