[package]
name = "app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
bon.workspace = true
chrono.workspace = true
domain.workspace = true
nutype.workspace = true
serde.workspace = true
serde_json.workspace = true
statum.workspace = true
strum.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
