[package]
name = "domain"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bon.workspace = true
chrono.workspace = true
nutype.workspace = true
nonempty.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
