[package]
name = "storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bon.workspace = true
derive_more.workspace = true
domain.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true

[dev-dependencies]
chrono.workspace = true
uuid.workspace = true
