[package]
name = "pet-resort-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
app.workspace = true
axum.workspace = true
domain.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
storage.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
chrono.workspace = true
tracing-subscriber.workspace = true
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true
