[package]
name = "gingr"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
bon.workspace = true
bytes.workspace = true
chrono.workspace = true
domain.workspace = true
hmac.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
