[package]
name = "gingr"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bon.workspace = true
bytes.workspace = true
chrono.workspace = true
derive_more.workspace = true
domain.workspace = true
hmac.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
strum.workspace = true
subtle.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
